--- a/platforms/browser/www/css/custom.css
+++ b/platforms/browser/www/css/custom.css
@@ -555,35 +555,34 @@ a {
 
 
 #loading {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 20000;
     
     width: 100%;
     height: 100%;
-    padding: calc(50% - 26px);
-    /* background-image: url("../images/splash.png");
+   /* padding: calc(50% - 26px);*/
+    background-image: url("../images/intro.png");
     background-repeat: no-repeat;
-    background-size:contain;*/
-   
-    background-color: #d10000;
-    position: absolute;
+    background-size:cover;
+   background-position: center center;
+   background-color: #d10000;
+    
 
-   
     /* padding-left: calc(50% - 25px); */
 }
 
 
 
 .redbg {
-  background: rgba(227,109,98,1);
-background: -moz-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(227,109,98,1)), color-stop(19%, rgba(204,0,14,1)), color-stop(100%, rgba(204,0,14,1)));
-background: -webkit-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
-background: -o-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
-background: -ms-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
-background: linear-gradient(to bottom, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
+background-color: rgba(227,109,98,1);
+background-color: -moz-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
+background-color: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(227,109,98,1)), color-stop(19%, rgba(204,0,14,1)), color-stop(100%, rgba(204,0,14,1)));
+background-color: -webkit-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
+background-color: -o-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
+background-color: -ms-linear-gradient(top, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
+background-color: linear-gradient(to bottom, rgba(227,109,98,1) 0%, rgba(204,0,14,1) 19%, rgba(204,0,14,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e36d62', endColorstr='#cc000e', GradientType=0 );
 }
 
